      schema: revision/number of changes, e.g. Storage-Revision: 123/45
      without changes Storage-Revision: 123/0
      TODO: Add description in manual
CR: Service: Review and optimization of CONNECT
    - Storage must be initialized mandatory with CONNECT before it can be used.
    - Added alternative alias method TOUCH, if CONNECT is not allowed.
CR: Service: Review and optimization of OPTIONS
    - Omission of the response header Storage-Effects.
    - Omission as an alternative to CONNECT, if CONNECT is not allowed use TOUCH.
CR: Service: Review and optimization of DELETE, PATCH, PUT
    - Requests with XPath that do not address a target are answered with status
      304 (Not Modified), as the request does not change the storage.
CR: Service: Optimization of data storage
    - Unnecessary spaces and indentations are removed.
CR: Test: Added option XMEX_DEBUG_MODE
    - Forces the use of the automatic incremental revision type
    - Adds hashed headers for request, response and storage to the response
    - Storage files are also created with the file extension xml and formatted
    - Storage files are saved in versions
      TODO: Add description in manual
CR: Test: Review and optimization
    - Switch to the use of XMEX_DEBUG_MODE
    - Switch to new hashes in the response header
      Trace-Request-Hash, Trace-Request-Header-Hash, Trace-Request-Data-Hash
      Trace-Response-Hash, Trace-Response-Header-Hash, Trace-Response-Data-Hash
      Trace-Storage-Hash
      TODO: Add description in manual

1.3.1 20240801
BF: Review: Optimization/Corrections
BF: Build: Optimization / correction of the release info process
CR: Build: Releases are now only available on the release page
CR: OpenAPI: Added the missing OpenAPI Specification
CR: Project: Moved repository to xml-micro-exchange-php
NT: Harmonization of version numbers for the different implementations
    Major and minor describe the API, patch refers to the implementation.